@@ -1,5 +1,10 @@
 2007-08-07  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-style.c: (gtk_theme_changed): also remove code that we
+	needed when the thumbnailer was still in-process
+
+2007-08-07  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-style.c: (color_button_clicked_cb): remove stuff I forgot
 	to delete
 
